Solved problem with Redis connection from a container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,6 @@ services:
     image: redis
     networks:
       - webnet
-    volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    ports:
-      - "6379"
   db:
     image: postgres
     networks: 
@@ -30,9 +26,7 @@ services:
       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://postgres:admin123@db:5432/Postboard
       LESS_BIN: /usr/local/bin/lessc
       DB_HOST: db
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_PASSWORD:
+      REDIS_URL: redis://redis:6379/0
     command: ["./wait-for-it.sh", "db:5432", "--", "./start.sh"]
 networks:
   webnet:
